--- a/sass/themes/mobile/page/restaurant/detail/_neararea.scss
+++ b/sass/themes/mobile/page/restaurant/detail/_neararea.scss
@@ -21,7 +21,7 @@
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    background-image: url($bast-images-path + 'bg_area_map.jpg');
+                    background-image: url($bast-images-path + 'mobile/bg_area_map.jpg');
                     background-repeat: no-repeat;
                     background-position: center center;
                     background-size: 100% 100%;
