--- a/sass/themes/pc/layout/_footer.scss
+++ b/sass/themes/pc/layout/_footer.scss
@@ -13,7 +13,7 @@
 @import "footer/_layout";
 
 // _top.scss
-// @import "footer/_top";
+@import "footer/_top";
 
 // _bottom.scss
-// @import "footer/_bottom";
+@import "footer/_bottom";
