--- a/sass/themes/pc/layout/_header.scss
+++ b/sass/themes/pc/layout/_header.scss
@@ -13,15 +13,15 @@
 // _layout.scss
 @import "header/_layout";
 
-// _banner.scss
-@import "header/_banner";
+// _top.scss
+@import "header/_top";
 
 // _main.scss
 @import "header/_main";
 
-// _nav.scss
-@import "header/_nav";
+// _banner.scss
+@import "header/_banner";
 
 // _search.scss
-@import "header/_search";
+// @import "header/_search";
 
