--- a/sass/themes/pc/lib/module/list/comment/_layout.scss
+++ b/sass/themes/pc/lib/module/list/comment/_layout.scss
@@ -12,8 +12,8 @@
     // li
     > li {
         display: flex;
-        @include remCalc("margin", 0 -10);
-        @include remCalc("padding", 10 10 20);
+        @include remCalc("margin", 0);
+        @include remCalc("padding", 15 0);
         @include remCalc("border-bottom", (0.5 solid $base-border-color));
 
         &:first-child {
