--- a/sass/themes/mobile/layout/header/_search.scss
+++ b/sass/themes/mobile/layout/header/_search.scss
@@ -17,58 +17,78 @@
 
         // search
         > .search {
-            display: flex;
-            align-items: center;
-            @include remCalc("padding", 14 10);
-            background-color: #ffffff;
+            @include remCalc("height", 59);
 
-            // ui_text
-            > .ui_text {
-                flex: 1;
-                margin: 0;
-                > .input {
-                    border-color: transparent;
-                    @include remCalc("border-radius", 100);
-                    @include remCalc("padding", 6 6+16+6 6 28);
-                    @include font-size(12);
-                    height: auto;
-                    line-height: 1.33;
-                    background-color: #eeeeee;
-                }
-                > .ui_icon {
-                    @include remCalc("left", 8);
-                    @include remCalc("width", 16);
-                    @include remCalc("height", 16);
-                    color: $base-text-color2;
-                }
-                > .clear {
-                    // position: absolute;
-                    @include position-center(top);
-                    @include remCalc("right", 6);
-                    color: #ffffff;
-                    border-radius: 50%;
-                    @include remCalc("width", 16);
-                    @include remCalc("height", 16);
+            // content
+            > .content {
+                display: flex;
+                align-items: center;
+                @include remCalc("padding", 15 10);
+                background-color: #ffffff;
 
-                    > .ui_icon {
-                        @include remCalc("padding", 2);
-                        @include remCalc("width", 16);
-                        @include remCalc("height", 16);
-                        background-color: #cccccc;
-                        border-radius: 50%;
-                        vertical-align: baseline;
+                // ui_text
+                > .ui_text {
+                    margin: 0;
+                    flex: 1;
+                    // form
+                    > form {
+                        > .input {
+                            border-color: transparent;
+                            @include remCalc("border-radius", 100);
+                            @include remCalc("padding", 6 6+16+6 6 28);
+                            @include font-size(12);
+                            height: auto;
+                            line-height: 1.33;
+                            background-color: #eeeeee;
+                        }
+                        > .ui_icon {
+                            @include remCalc("left", 8);
+                            @include remCalc("width", 16);
+                            @include remCalc("height", 16);
+                            color: $base-text-color2;
+                        }
+                        > .clear {
+                            // position: absolute;
+                            @include position-center(top);
+                            @include remCalc("right", 6);
+                            color: #ffffff;
+                            border-radius: 50%;
+                            @include remCalc("width", 16);
+                            @include remCalc("height", 16);
+
+                            > .ui_icon {
+                                @include remCalc("padding", 2);
+                                @include remCalc("width", 16);
+                                @include remCalc("height", 16);
+                                background-color: #cccccc;
+                                border-radius: 50%;
+                                vertical-align: baseline;
+                            }
+                        }
                     }
+                    // form
                 }
+                // ui_text end
+                // close
+                > .close {
+                    @include remCalc("margin-left", 12);
+                    font-weight: 500;
+                    line-height: 1.71;
+                    color: $base-text-color;
+                }
+                // close end
+
+                // fixed
+                &.fixed {
+                    position: fixed;
+                    background-color: #ffffff;
+                    z-index: 9;
+                    left: 0;
+                    right: 0;
+                }
+                // fixed end
             }
-            // ui_text end
-            // close
-            > .close {
-                @include remCalc("margin-left", 12);
-                font-weight: 500;
-                line-height: 1.71;
-                color: $base-text-color;
-            }
-            // close end
+            // content end
         }
         // search end
     }
