--- a/sass/themes/mobile/lib/module/_notfind.scss
+++ b/sass/themes/mobile/lib/module/_notfind.scss
@@ -19,7 +19,7 @@
         display: block;
         @include remCalc("margin", 0 auto 10);
         @include remCalc("padding-top", 53);
-        background: url($bast-images-path + '/bg_empty.png') no-repeat center center;
+        background: url($bast-images-path + 'bg_empty.png') no-repeat center center;
         background-size: contain;
         content: "";
 
