--- a/sass/themes/pc/lib/module/_notfind.scss
+++ b/sass/themes/pc/lib/module/_notfind.scss
@@ -17,8 +17,8 @@
 
     &:before {
         display: block;
-        @include remCalc("margin", 0 auto 10);
-        @include remCalc("padding-top", 53);
+        @include remCalc("margin", 0 auto 20);
+        @include remCalc("padding-top", 106);
         background: url($bast-images-path + '/bg_empty.png') no-repeat center center;
         background-size: contain;
         content: "";
@@ -29,8 +29,8 @@
     }
 
     > p {
-        @include font-size(14);
-        line-height: 1.43;
+        // @include font-size(16);
+        // line-height: 1.43;
         color: $base-text-color2;
     }
 }
