--- a/sass/themes/pc/lib/module/list/comment/_img.scss
+++ b/sass/themes/pc/lib/module/list/comment/_img.scss
@@ -13,7 +13,9 @@
     > li {
         // user_img
         > .user_img {
-            @include remCalc("margin-right", 10);
+            @include remCalc("margin-right", 20);
+            @include remCalc("width", 60);
+            @include remCalc("height", 60);
 
             // max-screen
             @include max-screen($base-max-screen){}
