--- a/sass/themes/pc/lib/module/list/comment/content/_header.scss
+++ b/sass/themes/pc/lib/module/list/comment/content/_header.scss
@@ -16,7 +16,8 @@
     // title
     > .title {
         font-weight: 500;
-        line-height: 1.71;
+        line-height: 1.43;
+        @include font-size(14);
 
         > a {
             color: $base-heading-color;
@@ -29,6 +30,8 @@
         flex: 1;
         text-align: right;
         color: $base-text-color2;
+        @include font-size(12);
+        line-height: 1.33;
     }
     // time end
 
