--- a/sass/themes/pc/page/site/_index.scss
+++ b/sass/themes/pc/page/site/_index.scss
@@ -13,8 +13,9 @@
     &.index {
         // postlist
         > .postlist {
-            @include remCalc("padding", 10 0 0 10);
+            position: relative;
             background-color: transparent;
+
             // content
             > .content {
                 // ui_postlist
@@ -26,17 +27,7 @@
 
                         > a {
                             // img
-                            > .img {
-                                // position: relative;
-                                // @include remCalc("height", 90);
-
-                                // > img {
-                                //     position: absolute;
-                                //     width: 100%;
-                                //     height: 100%;
-                                //     @include position-center;
-                                // }
-                            }
+                            > .img {}
                             // img end
                         }
                     }
